# python-cli-template

./: .gitignore  README.md  manual-setup.md  setup.sh  start.sh
template/: .env.example  .gitignore  Dockerfile  README.md  config.yaml  deploy.sh  pyproject.toml  remove.sh
template/scripts/: deploy.sh  remove.sh  run.sh
template/src/: app.py  config.py  main.py
template/src/tests/: test_app.py
test-app/: .env.example  Dockerfile  README.md  pyproject.toml
test-app/src/: app.py  config.py  logger.py  main.py
test-app/src/tests/: test_app.py
