[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Sushant Joshi <sushantnpj@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.scripts]
test-app = "src.main:cli"

[tool.poetry.dependencies]
python = ">=3.12"
rich = ">=13.0.0"
click = ">=8.0.0"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
black = ">=24.0.0"
isort = ">=5.13.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
